# SSE-Bench

./: .gitignore  README.md  benchmark_spec.md  pyproject.toml
artifacts/: benchmark_overview.json  benchmark_overview.md  cross_dataset_transfer.json  infopath_baselines.json  infopath_data_quality.csv  infopath_label_sensitivity.csv  infopath_summary.json  infopath_topic_thresholds.csv  infopath_window_sweep.json  synthetic_sse_baselines.json  synthetic_sse_data_quality.csv  synthetic_sse_summary.json  synthetic_sse_window_sweep.json  uci_news_baselines.json  uci_news_cohort_thresholds.csv  uci_news_data_quality.csv  uci_news_label_sensitivity.csv  uci_news_summary.json  uci_news_window_sweep.json
baselines/: __init__.py  common.py  early_growth.py  final_size_regression.py  graph_cascade_classifier.py  time_to_sse_regression.py  trajectory_retrieval.py  xgboost_baseline.py
datasets/: __init__.py
docs/: benchmark_logic.md  validity_notes.md
evaluation/: __init__.py  metrics.py
features/: __init__.py  early_observations.py  graph_features.py
retrieval/: __init__.py  trajectory.py
schema/: __init__.py  event.py
scripts/: __init__.py  build_benchmark_overview.py  build_benchmark_plots.py  build_paper_tables.py  prepare_all_datasets.py  prepare_infopath.py  prepare_synthetic_sse.py  prepare_uci_news.py  run_all_benchmark_suites.py  run_cross_dataset_transfer.py  run_infopath_benchmark_suite.py  run_synthetic_benchmark_suite.py  run_uci_benchmark_suite.py  run_window_sweep.py
tests/: conftest.py  test_build_benchmark_plots.py  test_cross_dataset_transfer.py  (+7 more)
(+10 files in other folders)
