[project]
name = "sse-bench"
version = "0.1.0"
description = "Super-Spreading Event Forecasting Benchmark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "xgboost>=2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
